Add transcription + annotation support for images
